--- a/asset/css/reset.css
+++ b/asset/css/reset.css
@@ -56,8 +56,7 @@ form .form-text__main {
 
 }
 
-form .form-text__sub{
-	
+form .form-text-sub__reset{
 	font-weight: 400;
 	font-size: 15px;
 	line-height: 18px;
@@ -65,10 +64,15 @@ form .form-text__sub{
 	color: #5B5B61;
 	display: block;
 	text-align: center;
-	margin-bottom: 50px;
+	width:380px;
+	margin:16px auto 50px auto;
 }
 
 input {
+	padding: 18px 22px;
+    outline: 0;
+    border: 0;
+	border-radius: 11px;
 	width:380px;
 	max-height: 50px;
 	display: block;
@@ -89,7 +93,32 @@ div > img {
 	margin-top: calc((100vh - 376px)/2);
 	text-align: center;
 }
-
+.link-text,.form-text__intructions{
+	color:#5B5B61;
+	display: block;
+	text-align: center;
+	font-weight:400;
+	font-size:15px;
+	margin:28px auto 0 auto;
+}
+.form-text__intructions{
+	margin:0 auto;
+	max-width: 358px;
+	display: block;
+}
+.link-text a,.form-text__intructions a{
+	color: #23CD5D;
+	text-decoration: none;
+}
+.form-forgot-btn{
+	align-items: center;
+	padding: 19px 40px 20px;
+	width: 380px;
+	height: 54px;
+	background: #D6D6D8;
+	border-radius: 11px;
+	color: #ffffff;
+}
 .grid>div:nth-child(2){
 	background-color: #23CD5D;
 }
