--- a/asset/home.css
+++ b/asset/home.css
@@ -1,6 +1,8 @@
 :root{
     --margin-tb:3em;
     --margin-LR:123px;
+    --nav-btn-margintb:26px;
+    --margin-tb:160px;
 }
 *,*::before,*::after{
     color:#32323A;
@@ -10,7 +12,7 @@
 }
 body{
     color:#32323A;
-    font-family: 'Helvetica';
+    font-family: 'Helvetica', sans-serif;
     font-size:16px;
 }
 .img-res{
@@ -18,6 +20,13 @@ body{
     height:auto;
 }
 
+a{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 12px;
+}
 
 /* nav bar*/
 .nav-brand{
@@ -42,7 +51,9 @@ body{
     max-width: 143px;
     height: 55px;
 }
-
+.hero-btns{
+    margin-top:48px;
+}
 .brand-text{
     font-weight:500;
     font-size:25px;
@@ -63,6 +74,12 @@ body{
     display:grid;
     grid-template-columns: repeat(2,1fr);
     
+    
+}
+.hero-btns>a{
+    padding:19px 25px;
+    width: 137px;
+    height: 48px;
 }
 .hero-section{
     margin-top:10em;
@@ -74,25 +91,25 @@ body{
     font-weight: 600;
     font-size: 60px;
     line-height: 80px;
-    text-transform: capitalize;
     margin-right:72px;
 }
 .community-section{
-    margin: 160px var(--margin-LR);
+    margin: var(--margin-tb) var(--margin-LR);
 }
-
+.community-btn{
+    width: 137px;
+    height: 48px;
+    padding: 19px 25px;
+    display: block;
+    margin-top:33px;
+}
 .community-text{
     max-width: 416px;
-    
+    padding:0;
 }
 .community-section>img[src="img/home-img/Illustration.png"]{
     padding:0 0.5em;
     height: auto;
-}
-.community-text>a{
-    padding: 19px 25px;
-    margin-top:200em;
-   
 }
 .community-text__header{
     font-style: normal;
@@ -125,8 +142,8 @@ body{
 .btn-nav{
     width: 111px;
     height: 48px;
-    padding: 19px 25px;
     justify-self:end;
+    padding: 19px 25px;
     text-align:center;
 }
 .community-text>p:nth-of-type(2){
@@ -146,8 +163,9 @@ body{
     margin:0 auto var(--margin-tb) auto;
 }
 .outer-btn{
-   max-width: 143px;
-    height: 55px;
+    max-width: 137px;
+    height: 48px;
+    padding: 19px 25px;
 }
 .outro-text__header{
     font-style: normal;
@@ -155,26 +173,27 @@ body{
     font-size: 72px;
     line-height: 80px;
     text-transform:capitalize;
-    margin-bottom:55px;
+    margin-bottom:37px;
+    padding:10px;
 }
-.dashboard{
-    display:block;
-    text-align:center;
-    margin: var(--margin-tb) var(--margin-LR);
-}
+
 .footer-section{
     text-transform:capitalize;
     background-color:#F5F5F5;
     width:100%;
     margin-top:var(--margin-tb);
-    padding:var(--margin-tb) var(--margin-LR);
+    padding:0 var(--margin-LR);
 }
 .footer-social{
     display:grid;
-    grid-template-columns:repeat(4,35px);
-   
+    grid-template-columns:repeat(4,32px);
+    grid-gap:11.56px;
+    margin:44px 0;
 }
 
+.footer-water__mark,.footer-links{
+    margin:52.5px 0;
+}
 ul{
     list-style:none;
 }
@@ -195,7 +214,7 @@ ul{
         padding:2em 0.5em;
     }
      .hero-section,.community-section{
-        margin:2em 0.5em;
+        margin:8em 0.5em;
      }
      .hero-section{
         margin-top:10em;
@@ -213,10 +232,12 @@ ul{
         padding-left:1.5em;
     }
      .hero-header__text,.community-text__header{
-        font-size:45px;
+        font-size:35px;
+        line-height:40px;
      }
      .outro-text__header{
-        font-size:40px;
+        font-size:30px;
+        line-height:40px;
      }
      .footer-links{
         display: block;
@@ -255,7 +276,9 @@ ul{
     }
     .hero-btns{
         margin:3em 0;
+       
     }
+    
     .community-section{
         margin:3em 10px;
         display: block;
