--- a/asset/css/login.css
+++ b/asset/css/login.css
@@ -174,7 +174,7 @@ label{
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (max-width:768px) {
-	.grid {
+	div[class="grid"]{
 		grid-template-columns: 1fr;
 	}
 
