--- a/asset/css/dashboard.css
+++ b/asset/css/dashboard.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 body{
-    font-family:Helvetica, sans-serif;
+    font-family: 'Inter', sans-serif;
     color: #32323A;
 }
 /* nav bar top*/
@@ -17,7 +17,9 @@ body{
     margin-left:33px;
     align-items: center;
 }
-
+.logo h3{
+    text-transform: capitalize;
+}
 nav{
     display:grid;
     grid-template-columns:1fr 4fr .7fr;
@@ -33,6 +35,8 @@ nav>h2:nth-child(2){
 }
 
 
+
+/*drop down css*/
 .user-profile{
     display:grid;
     grid-template-columns:1fr 1fr;
@@ -41,10 +45,20 @@ nav>h2:nth-child(2){
 .user-profile img{
     border-radius:50%;
 }
+/*.user-profile img:focus + .drop-down{
+    display: block;
+   
+}
+*/
+
+
+
+
+
 .user-profile span{
     border-radius: 500px;
     max-width: 73px;
-    
+    cursor:pointer;
     background: #F5F5F5;
     padding:8px 16px;
     text-align: center;
@@ -78,58 +92,78 @@ aside ul li a{
     row-gap:4px;
     padding:10px;
 }
+
 aside ul li a:hover{
     background: #20B954;
     color: #F5F5F5;
     border-radius:11px;
 }
-aside ul li a img{
-   display:inline-block;
-   margin:0 4px;
+
+/*testing svg*/
+aside ul li a:hover + aside ul li a svg{
+    fill:#F5F5F5;
 }
 
-a{
-    text-decoration: none;
+aside ul li a svg{
+    fill:#99999D;
+}
+
+
+aside ul li a{
+   display: grid;
+   grid-template-columns:.9fr 4fr;
+   align-items: center;
+   align-self: center;
     font-weight: 400;
     font-size: 15px;
     line-height: 24px;
     color: #99999D;
+   
 }
+a{
+    text-decoration: none;
+    color:#32323A;
+}
+
 /*end of side nav*/
 .mask-group{
     max-width: 173px;
     background: #32323A;
     border-radius: 20px;
     display: block;
-    margin:50px auto;
-    padding-bottom:20px;
-    background-image: url('img/Mask Group.svg');
+    height:282px;
+    margin:16em auto 30px auto;
+    position: relative;
 }
 .mask-group img{
     height:auto;
     width:auto;
-    
+    position: absolute;
 }
 .mask-group p,.mask-group button{
     text-align: center;
-   
 }
 .mask-group p{
-    margin:0;
     font-weight: 400;
     font-size: 13px;
     line-height: 18px;
-    text-align: center;
-    margin-top:-1000px;
-    margin:auto;
     color:#FFFFFF;
-    width:113px;
-    height: 54px;
+    width: 113px;
+    margin:20px auto;
 }
 .mask-group button{
-    margin:24px auto;
-   
+    display: grid;
+    grid-template-columns:.5fr 2fr;
+    align-items: center;
+    align-self: center;
 }
+.mask-group_body{
+    position: absolute;
+    bottom:25px;
+    display: block;
+    margin: 0px calc((173px - 112px)/2);
+}
+/*end of masked side bar*/
 .btn-active{
     padding: 14px;
     width: 121px;
@@ -163,6 +197,9 @@ section div{
     color: #32323A;
     padding-top:15px;
     margin: 48px 0 0 0;
+}
+.header-text h2{
+    text-transform: capitalize;
 }
 .sub-header-text{
     margin-bottom:16px;
@@ -211,6 +248,56 @@ section div{
     margin-bottom:8px;
    
 }
+
+/*dropdown*/
+.drop-down{
+    display: none;
+    position: absolute;
+    right:20px;
+    top:70px;
+    background: #FFFFFF;
+    padding: 10px 0;
+    width: 302px;
+    border: 1px solid #EBEBEB;
+    box-shadow: 0px 16px 32px rgba(0, 0, 0, 0.08);
+    border-radius: 16px;
+}
+.drop-down_body ul{
+    list-style: none;
+    display:block;
+}
+.drop-down_body ul li a,.drop-down_footer a{
+    display:grid;
+    grid-template-columns: .9fr 8fr;
+    align-items: center;
+    align-self: center;
+    padding:8px;
+    color:#5B5B61;
+}
+.drop-down_body ul li a:hover,.drop-down_footer a:hover{
+    background: #F5F5F5;
+    border-radius: 11px;
+}
+.drop-down_header img{
+    border-radius:500px;
+}
+.drop-down_header{
+    display: grid;
+    grid-template-columns:2fr 6fr;
+    border-bottom: 1px solid #EBEBEB;
+    padding:12px;
+    
+}
+.user-name_email p{
+    color: #99999D;
+}
+.drop-down_body,.drop-down_footer{
+    padding:8px;
+}
+.drop-down_footer{
+    border-top:1px solid #EBEBEB;
+}
+/*end of dropdown*/
 @media only screen and (max-width:768px) {
     main{
         display:block;
