--- a/asset/css/dashboard.css
+++ b/asset/css/dashboard.css
@@ -272,6 +272,7 @@ section div{
     align-items: center;
     align-self: center;
     padding:8px;
+    cursor: pointer;
     color:#5B5B61;
 }
 .drop-down_body ul li a:hover,.drop-down_footer a:hover{
